--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,7 @@
-<!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Les Etudiants</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/notes">Les Notes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Home</a></li>
-          <li><a class="dropdown-item" href="#">Les Etudiants</a></li>
-          <li><a class="dropdown-item" href="#">Note</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 
-<router-outlet>
+<navbar></navbar>
+<router-outlet >
 
 </router-outlet>
 
