--- a/src/app/component/notes/addnote/addnote.component.html
+++ b/src/app/component/notes/addnote/addnote.component.html
@@ -1,1 +1,22 @@
-<p>addnote works!</p>
+<div class="container mt-2">
+    <div class="card col-md-6 offset-3">
+      <div class="card-header">  Nouvelle note  </div>
+      <div class="card-body">
+          <form [formGroup]="newNoteForm" (ngSubmit)="saveNote()">
+            <div class="mb-3">
+              <label class="form-label"> Apogee :</label>
+              <input type="text" formControlName="apogee" class="form-control">
+            </div>
+            <div class="mb-3">
+                 <label class="form-label"> IdModule :</label>
+                 <input type="text" formControlName="IdModule" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label class="form-label"> Note :</label>
+              <input type="text" formControlName="note" class="form-control">
+            </div>
+            <button class="btn btn-info"> Save </button>
+          </form>
+        </div>
+      </div>
+</div>
