--- a/src/app/component/notes/listenotes/listenotes.component.html
+++ b/src/app/component/notes/listenotes/listenotes.component.html
@@ -8,7 +8,9 @@
           <input type="text" formControlName="idFiliere" class="form-control">
           <label class="input-group-text"> IDModule :</label>
           <input type="text" formControlName="idModule" class="form-control">
-          <button class="btn btn-info">Search</button>
+          <button class="btn btn-info">
+            <i class="bi bi-search"></i>
+          </button>
         </div>
       </form>
     </div>
