add service save note

--- a/src/app/component/notes/addnote/addnote.component.html
+++ b/src/app/component/notes/addnote/addnote.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="mb-3">
                  <label class="form-label"> IdModule :</label>
-                 <input type="text" formControlName="IdModule" class="form-control">
+                 <input type="text" formControlName="idModule" class="form-control">
             </div>
             <div class="mb-3">
                 <label class="form-label"> Note :</label>
