--- a/src/app/GeneralComponents/navbar/navbar.component.html
+++ b/src/app/GeneralComponents/navbar/navbar.component.html
@@ -19,8 +19,8 @@
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des Notes</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" routerLink="/notes">Liste Notes</a></li>
-          <li><a class="dropdown-item" routerLink="/addNote">Ajouter Note</a></li>
-          <li><a class="dropdown-item" href="#">Modifier Note</a></li>
+          <li><a class="dropdown-item" (click)="openModal()">Ajouter Note</a></li>
+          <li><a class="dropdown-item" (click)="openModal()">Modifier Note</a></li>
         </ul>
       </li>
     </ul>
