--- a/src/app/GestionNote/Components/addnote/addnote.component.html
+++ b/src/app/GestionNote/Components/addnote/addnote.component.html
@@ -1,22 +1,28 @@
-<div class="container mt-2">
-    <div class="card col-md-6 offset-3">
-      <div class="card-header">  Nouvelle note  </div>
-      <div class="card-body">
-          <form [formGroup]="newNoteForm" (ngSubmit)="saveNote()">
-            <div class="mb-3">
-              <label class="form-label"> Apogee :</label>
-              <input type="text" formControlName="apogee" class="form-control">
-            </div>
-            <div class="mb-3">
-                 <label class="form-label"> IdModule :</label>
-                 <input type="text" formControlName="idModule" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label class="form-label"> Note :</label>
-              <input type="text" formControlName="note" class="form-control">
-            </div>
-            <button class="btn btn-info"> Save </button>
-          </form>
-        </div>
-      </div>
+<div class="modal-header">
+  <h5 class="modal-title" id="exampleModalLabel">Add Note</h5>
+  <button
+    type="button"
+    class="btn-close"
+    aria-label="Close"
+    (click)="modalRef.close()"
+  ></button>
+</div>
+<div class="container">
+<div class="card-body">
+  <form [formGroup]="newNoteForm" (ngSubmit)="saveNote()">
+    <div class="mb-3">
+      <label class="form-label"> Apogee :</label>
+      <input type="text" formControlName="apogee" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label"> IdModule :</label>
+      <input type="text" formControlName="idModule" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label"> Note :</label>
+      <input type="text" formControlName="note" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Save Note</button>
+  </form>
+</div>
 </div>
