--- a/src/app/GeneralComponents/navbar/navbar.component.html
+++ b/src/app/GeneralComponents/navbar/navbar.component.html
@@ -28,10 +28,25 @@
           <li><a class="dropdown-item" (click)="openModal()">Modifier Note</a></li>
         </ul>
       </li>
+      <ul class="navbar-nav float-end">
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="securityService.profile ; else loginTemplate"  >
+            <a>{{securityService.profile.firstName}}</a>
+          </a>
+          <ng-template #loginTemplate>
+            <a class="btn nav-link" aria-current="page"  (click)="login()">Login</a>
+          </ng-template>
+        </li>
+        <li class="nav-item dropdown"  *ngIf="securityService.profile">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
+            <li><a class="dropdown-item" (click)="onLogout()">Logout</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+          </ul>
+        </li>
+      </ul>
     </ul>
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit" >Search</button>
-    </form>
+
   </div>
 </nav>
