--- a/src/app/GestionNote/Components/addnote/addnote.component.html
+++ b/src/app/GestionNote/Components/addnote/addnote.component.html
@@ -4,7 +4,7 @@
     type="button"
     class="btn-close"
     aria-label="Close"
-    (click)="modalRef.close()"
+    (click)="modalRefAdd.close()"
   ></button>
 </div>
 <div class="container">
