--- a/src/app/GestionNote/Components/addnote/addnote.component.html
+++ b/src/app/GestionNote/Components/addnote/addnote.component.html
@@ -14,10 +14,7 @@
       <label class="form-label"> Apogee :</label>
       <input type="text" formControlName="apogee" class="form-control">
     </div>
-    <div class="mb-3">
-      <label class="form-label"> IdModule :</label>
-      <input type="text" formControlName="idModule" class="form-control">
-    </div>
+      <input type="hidden" formControlName="idModule" class="form-control">
     <div class="mb-3">
       <label class="form-label"> Note :</label>
       <input type="text" formControlName="note" class="form-control">
