--- a/src/app/GeneralComponents/popupComponenets/popup-msg/popup-msg.component.html
+++ b/src/app/GeneralComponents/popupComponenets/popup-msg/popup-msg.component.html
@@ -1,3 +1,3 @@
 <div class="modal-body">
-  <div [ngClass]="title === 'success' ? 'alert alert-success' : 'alert alert-danger'" role="alert">{{ title }}</div>
+  <div [ngClass]="title === 'success' || 'Note Has delete Successfully'? 'alert alert-success' : 'alert alert-danger'" role="alert">{{ title }}</div>
 </div>
