--- a/src/app/GeneralComponents/navbar/navbar.component.html
+++ b/src/app/GeneralComponents/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-<!-- Grey with black text -->
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <div class="container-fluid">
     <ul class="navbar-nav">
@@ -17,9 +16,14 @@
         </ul>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+     <!-- gestion inscription -->
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des Inscriptions</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/listeinscription">Liste Inscriptions</a></li>
+            <li><a class="dropdown-item" routerLink="/inscription-students">Liste Inscriptions Etudiant</a></li>
+          </ul>
+        </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des Notes</a>
         <ul class="dropdown-menu">
@@ -27,25 +31,28 @@
           <li><a class="dropdown-item" routerLink="/notesEtd">Liste Notes Etudiant</a></li>
         </ul>
       </li>
-      <ul class="navbar-nav float-end">
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="securityService.profile ; else loginTemplate"  >
-            <a>{{securityService.profile.firstName}}</a>
-          </a>
-          <ng-template #loginTemplate>
-            <a class="btn nav-link" aria-current="page"  (click)="login()">Login</a>
-          </ng-template>
-        </li>
-        <li class="nav-item dropdown"  *ngIf="securityService.profile">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
-            <li><a class="dropdown-item" (click)="onLogout()">Logout</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-          </ul>
-        </li>
-      </ul>
     </ul>
 
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="securityService.profile ; else loginTemplate">
+          {{securityService.profile.firstName}}
+        </a>
+        <ng-template #loginTemplate>
+          <a class="btn nav-link" aria-current="page" (click)="login()">Login</a>
+        </ng-template>
+      </li>
+      <li class="nav-item dropdown" *ngIf="securityService.profile">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" (click)="onLogout()">Logout</a></li>
+          <li><a class="dropdown-item" href="#">Profile</a></li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="inscription">inscription</a>
+      </li>
+    </ul>
   </div>
 </nav>
