--- a/src/app/GeneralComponents/navbar/navbar.component.html
+++ b/src/app/GeneralComponents/navbar/navbar.component.html
@@ -10,20 +10,23 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"> Gestion des etudiants</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" routerLink="/etudiants"><i class="bi bi-people"> </i> La liste des etudiants</a></li>
-          <li><a class="dropdown-item" routerLink="/filieres"><i class="bi bi-caret-down-square"> </i> La liste des filieres</a></li>
+          <li><a class="dropdown-item" routerLink="/etudiants"><i class="bi bi-people"> </i> La liste des etudiants</a>
+          </li>
+          <li><a class="dropdown-item" routerLink="/filieres"><i class="bi bi-caret-down-square"> </i> La liste des
+            filieres</a></li>
           <li><a class="dropdown-item" routerLink="/modules"><i class="bi bi-list"> </i> La liste des modules</a></li>
         </ul>
       </li>
 
-     <!-- gestion inscription -->
+      <!-- gestion inscription -->
       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des Inscriptions</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/listeinscription">Liste Inscriptions</a></li>
-            <li><a class="dropdown-item" routerLink="/inscription-students">Liste Inscriptions Etudiant</a></li>
-          </ul>
-        </li>
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des
+          Inscriptions</a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" routerLink="/listeinscription">Liste Inscriptions</a></li>
+          <li><a class="dropdown-item" routerLink="/inscription-students">Liste Inscriptions Etudiant</a></li>
+        </ul>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Gestion Des Notes</a>
         <ul class="dropdown-menu">
@@ -31,27 +34,25 @@
           <li><a class="dropdown-item" routerLink="/notesEtd">Liste Notes Etudiant</a></li>
         </ul>
       </li>
-<<<<<<< HEAD
-<!--      <ul class="navbar-nav float-end">-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link" *ngIf="securityService.profile ; else loginTemplate"  >-->
-<!--            <a>{{securityService.profile.firstName}}</a>-->
-<!--          </a>-->
-<!--          <ng-template #loginTemplate>-->
-<!--            <a class="btn nav-link" aria-current="page"  (click)="login()">Login</a>-->
-<!--          </ng-template>-->
-<!--        </li>-->
-<!--        <li class="nav-item dropdown"  *ngIf="securityService.profile">-->
-<!--          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--          </a>-->
-<!--          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >-->
-<!--            <li><a class="dropdown-item" (click)="onLogout()">Logout</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">Profile</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--      </ul>-->
-=======
->>>>>>> 7cbafb65d0e215c621a1f117c26d0a5ed6d37386
+      <!--      <ul class="navbar-nav float-end">-->
+      <!--        <li class="nav-item">-->
+      <!--          <a class="nav-link" *ngIf="securityService.profile ; else loginTemplate"  >-->
+      <!--            <a>{{securityService.profile.firstName}}</a>-->
+      <!--          </a>-->
+      <!--          <ng-template #loginTemplate>-->
+      <!--            <a class="btn nav-link" aria-current="page"  (click)="login()">Login</a>-->
+      <!--          </ng-template>-->
+      <!--        </li>-->
+      <!--        <li class="nav-item dropdown"  *ngIf="securityService.profile">-->
+      <!--          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+      <!--          </a>-->
+      <!--          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >-->
+      <!--            <li><a class="dropdown-item" (click)="onLogout()">Logout</a></li>-->
+      <!--            <li><a class="dropdown-item" href="#">Profile</a></li>-->
+      <!--          </ul>-->
+      <!--        </li>-->
+      <!--      </ul>-->
+
     </ul>
 
     <ul class="navbar-nav ml-auto">
