liste dropdown liste, bootstrap-icons , apiStudent in environment.ts

--- a/src/app/GestionStudent/Components/filieres/filieres.component.html
+++ b/src/app/GestionStudent/Components/filieres/filieres.component.html
@@ -30,7 +30,7 @@
             <td>{{filiere.id}}</td>
             <td>{{filiere.name}}</td>
             <td>
-              <button class="btn btn-primary me-4" (click)="onEditFiliere(filiere)"><i class="bi bi-pencil-fill"></i></button>
+              <button class="btn btn-warning me-4" (click)="onEditFiliere(filiere)"><i class="fa fa-pencil"></i></button>
               <button class="btn btn-danger me-4" (click)="deleteFiliere(filiere.id)"><i class="bi bi-x-lg " ></i></button>
             </td>
           </tr>
