--- a/src/app/GestionStudent/Components/students/students.component.html
+++ b/src/app/GestionStudent/Components/students/students.component.html
@@ -1,110 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>List All Students</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script>// Data Picker Initialization
+  $('.datepicker').datepicker({
+    inline: true
+  });</script>
+</head>
 
 <body>
-  <div class="container">
-    <div class="table-responsive">
-      <div class="table-wrapper">
-        <div class="table-title">
-          <div class="row">
-            <div class="col-xs-6">
-              <h2>Student <b>Management</b></h2>
-            </div>
-            <div class="col-xs-6">
-              <div class="search-box">
-                <i class="material-icons">&#xE8B6;</i>
-                <input type="text" class="form-control" placeholder="Search a Student&hellip;"  >
-              </div>
-            </div>
-
+<div class="container">
+  <div class="table-responsive">
+    <div class="table-wrapper">
+      <div class="table-title">
+        <div class="row">
+          <div class="col-xs-6">
+            <h2>Student <b>Management</b></h2>
           </div>
+          <div class="col-xs-6">
+            <div class="search-box">
+              <i class="fa fa-search"></i>
+              <!--                <i class="material-icons">&#xE8B6;</i>-->
+              <input type="text" class="form-control" placeholder="Search a Student&hellip;">
+            </div>
+          </div>
+
         </div>
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Email</th>
-              <th>Lieu De Naissance</th>
-              <th>Phone</th>
-              <th>CIN</th>
-              <th>CNE</th>
-              <th>Apogee</th>
-              <th>Adresse</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let student of students ">
-              <td>{{student.nom}}</td>
-              <td>{{student.prenom}}</td>
-              <td>{{student.email}}</td>
-              <td>{{student.lieuNaissance}}</td>
-              <td>{{student.phone}}</td>
-              <td>{{student.cin}}</td>
-              <td>{{student.cne}}</td>
-              <td>{{student.apogee}}</td>
-              <td>{{student.adresse}}</td>
-              <td>
-                <a href="exampleModal" class="edit" data-toggle="modal"    data-bs-toggle="modal" (click)=edit(student)
-                data-bs-target="#exampleModal"><i class="material-icons" data-toggle="tooltip" title="Edit"  >&#xE254;</i></a>
-
-
-                <a href="/etudiants" class="delete" data-toggle="modal"   (click)="deleteStudent(student.apogee)"><i class="material-icons"
-                    data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-              </td>
-            </tr>
-
-          </tbody>
-        </table>
-
       </div>
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>Lieu De Naissance</th>
+          <th>Phone</th>
+          <th>CIN</th>
+          <th>CNE</th>
+          <th>Apogee</th>
+          <th>Adresse</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let student of students ">
+          <td>{{student.nom}}</td>
+          <td>{{student.prenom}}</td>
+          <td>{{student.email}}</td>
+          <td>{{student.lieuNaissance}}</td>
+          <td>{{student.phone}}</td>
+          <td>{{student.cin}}</td>
+          <td>{{student.cne}}</td>
+          <td>{{student.apogee}}</td>
+          <td>{{student.adresse}}</td>
+          <td>
+            <a href="exampleModal" class="edit" data-toggle="modal" data-bs-toggle="modal" (click)=edit(student)
+               data-bs-target="#exampleModal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+
+
+            <a href="/etudiants" class="delete" data-toggle="modal" (click)="deleteStudent(student.apogee)"><i
+              class="material-icons"
+              data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+          </td>
+        </tr>
+
+        </tbody>
+      </table>
+
     </div>
   </div>
+</div>
 
 
-  <div class="modal" tabindex="-1" id="exampleModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modifier Student</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
+<div class="modal" tabindex="-1" id="exampleModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modifier Student</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
 
-            <div class="form-group">
-              <input type="text" class="form-control" id="apogee" name="apogee" [(ngModel)]="studentUpdated.apogee"
-                disabled />
-            </div>
-            <div class="form-group">
-              <label for="nom">Name:</label>
-              <input type="text" class="form-control" id="nom" name="nom" [(ngModel)]="studentUpdated.nom" />
-            </div>
-            <div class="form-group">
-              <label for="prenom">Prenom:</label>
-              <input type="text" class="form-control" id="prenom" name="Prenom" [(ngModel)]="studentUpdated.prenom" />
-            </div>
-            <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="text" class="form-control" id="email" name="email"
-                [(ngModel)]="studentUpdated.email" />
-            </div>
-            <div class="form-group">
-              <label for="lieuNaissance">LieuNaissance:</label>
-              <input type="text" class="form-control" id="lieuNaissance" name="lieuNaissance"
-                [(ngModel)]="studentUpdated.lieuNaissance" />
-            </div>
-            <div class="form-group">
-              <label for="phone">Phone:</label>
-              <input type="Tel" class="form-control" id="phone" name="phone" [(ngModel)]="studentUpdated.phone" />
-            </div>
-            <div class="form-group">
-              <label for="cin">CIN:</label>
-              <input type="text" class="form-control" id="cin" name="cin" [(ngModel)]="studentUpdated.cin" />
-            </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="apogee" name="apogee" [(ngModel)]="studentUpdated.apogee"
+                   disabled/>
+          </div>
+          <div class="form-group">
+            <label for="nom">Name:</label>
+            <input type="text" class="form-control" id="nom" name="nom" [(ngModel)]="studentUpdated.nom"/>
+          </div>
+          <div class="form-group">
+            <label for="prenom">Prenom:</label>
+            <input type="text" class="form-control" id="prenom" name="Prenom" [(ngModel)]="studentUpdated.prenom"/>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" class="form-control" id="email" name="email"
+                   [(ngModel)]="studentUpdated.email"/>
+          </div>
+          <div class="form-group">
+            <label for="lieuNaissance">LieuNaissance:</label>
+            <input type="text" class="form-control" id="lieuNaissance" name="lieuNaissance"
+                   [(ngModel)]="studentUpdated.lieuNaissance"/>
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone:</label>
+            <input type="Tel" class="form-control" id="phone" name="phone" [(ngModel)]="studentUpdated.phone"/>
+          </div>
+          <div class="form-group">
+            <label for="cin">CIN:</label>
+            <input type="text" class="form-control" id="cin" name="cin" [(ngModel)]="studentUpdated.cin"/>
+          </div>
 
 
         </form>
@@ -115,11 +132,12 @@
           Fermer
         </button>
         <button type="button" class="btn btn-primary" (click)="updateStudent()"
-          data-bs-dismiss="modal">Sauvegarder</button>
+                data-bs-dismiss="modal">Sauvegarder
+        </button>
       </div>
     </div>
   </div>
-  </div>
+</div>
 
 
 </body>
