--- a/src/app/GestionStudent/Components/modules/modules.component.html
+++ b/src/app/GestionStudent/Components/modules/modules.component.html
@@ -31,7 +31,7 @@
             <td>{{module.id}}</td>
             <td>{{module.name}}</td>
             <td>
-              <button class="btn btn-warning me-4"><i class="fa fa-pencil"></i></button>
+              <button class="btn btn-warning me-4" (click)="onEditModule(module)"><i class="fa fa-pencil"></i></button>
               <button class="btn btn-danger me-4" (click)="ondeleteModule(module.id)"><i class="bi bi-x-lg "></i></button>
             </td>
           </tr>
