--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,11 @@
 >
   <c-sidebar-brand
     [brandFull]="{
-      src: 'assets/img/brand/coreui-angular.svg',
-      width: 200,
-      height: 46,
-      alt: 'CoreUI Logo'
+      src: 'assets/logo.png',
+      width: 250,
+      height: 100,
+      alt: 'Logo',
+
     }"
     [brandNarrow]="{
       src: 'assets/img/brand/coreui-signet-white.svg',
