--- a/src/app/GestionNote/Components/liste-note-etud/liste-note-etud.component.html
+++ b/src/app/GestionNote/Components/liste-note-etud/liste-note-etud.component.html
@@ -9,9 +9,9 @@
             <dt class="col-sm-4 text-bold" title="CNE">CNE</dt>
             <dd class="col-sm-8">R137710519</dd>
             <dt class="col-sm-4 text-bold" title="Nom">Nom</dt>
-            <dd class="col-sm-8">EL MEHDI</dd>
+            <dd class="col-sm-8">Yazidi</dd>
             <dt class="col-sm-4 text-bold" title="Prénom">Prénom</dt>
-            <dd class="col-sm-8">RIDA</dd>
+            <dd class="col-sm-8">Yassine</dd>
           </dl>
         </div>
         <div class="col-md-6">
