--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -13,15 +13,15 @@
     </button>
     <c-header-nav class="d-none d-lg-flex">
       <c-nav-item>
-        <a  *ngIf="securityService.profile ; else loginTemplate">
-          {{securityService.profile.firstName}}
+        <a  *ngIf="environment.profileName ; else loginTemplate">
+          {{environment.profileName}}
         </a>
         <ng-template #loginTemplate>
-          <a class="btn nav-link" aria-current="page" (click)="login()">Login</a>
+          <a class="btn nav-link" aria-current="page" routerLink="/login">Login</a>
         </ng-template>
       </c-nav-item>
       <c-nav-item>
-        <li class="nav-item dropdown" *ngIf="securityService.profile">
+        <li class="nav-item dropdown" *ngIf="true">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -32,12 +32,12 @@
       <c-nav-item>
         <a routerLink="./inscription" cNavLink>
           <button>Inscription</button>
-          </a>
+        </a>
       </c-nav-item>
     </c-header-nav>
   </c-container>
   <c-header-divider></c-header-divider>
-  <c-container [fluid]="true">
+  <c-container >
     <c-breadcrumb-router class="ms-2"></c-breadcrumb-router>
   </c-container>
 </ng-container>
